--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                 <tr>
                   <th>Item</th>
                   <th>Price</th>
+                    <th>Qty</th>
                 </tr>
                 <tr id="item1"></tr>
                 <tr id="item2"></tr>
